fix for sidebar covering 100% height (kludge)

--- a/app/assets/stylesheets/sidebar.scss
+++ b/app/assets/stylesheets/sidebar.scss
@@ -1,12 +1,14 @@
 .sidebar {
   @include span-columns(2);
+  
   padding: $base-spacing;
-  margin: 0 !important;
   background-color: $dark-gray;
   color: white;
-  
   margin-bottom: -99999px;
   padding-bottom: 99999px;
   overflow: hidden;
-
+  margin-right: 0;
+  ul li a {
+    @include nav-font;
+  }
 }
